public/style.css
.application {
  font-family: 'Montserrat', sans-serif;
  font-weight: 200;
  color: white !important;
  height: 100vh !important;
  background-color: #ffffff !important;
}

::-webkit-scrollbar {
  display: none;
}

.content {
  z-index: 10;
}

.content-margin {
  margin-top: calc(40vh - 125px);
}

.main-toolbar {
  z-index: 20;
  background: none !important;
  color: white !important;
  mix-blend-mode: difference;
}

a:visited,
a:link {
  color: white !important;
}
a:visited.margin-text,
a:link.margin-text {
  color: black !important;
}

.toolbar-title {
  font-size: 48px;
  letter-spacing: 32px;
  font-weight: 200;
  width: calc(90vw - 128px);
  overflow: visible;
  z-index: 1;
}

.link-card {
  height: 120px !important;
  max-height: calc((100vh - 128px) / 6.0);
  cursor: pointer;
  background: none !important;
}

.card-link {
  text-align: center;
  font-size: calc((100vh - 128px) / 15.0);
  line-height: initial;
  text-decoration: none;
  width: 100%;
}

.link-image {
  height: 100%;
}

.image-invert {
  filter: invert(100%);
}

#app {
  background: black;
}

#app .application--wrap {
  background-image: url("http://b-e-z-z.com/static/moon.jpg");
  background-size: cover;
  background-position-y: center;
  background-position-x: center;
}

.bezz-logo {
  max-width: 200px;
  margin-right: -32px !important;
}

footer {
  position: fixed;
  width: 100vw;
  bottom: 0px;
  height: auto !important;
  z-index: 0;
}

footer .slide-y-reverse-transition-enter-active {
  transition-duration: 1s;
}

